--- a/app/src/main/res/layout/usercard.xml
+++ b/app/src/main/res/layout/usercard.xml
@@ -21,7 +21,7 @@
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/addFriendButton"
+            app:layout_constraintEnd_toStartOf="@id/chatUser"
             app:layout_constraintBottom_toTopOf="@id/favGamesTextView"
             app:layout_constraintHorizontal_chainStyle="spread_inside" />
 
@@ -33,16 +33,16 @@
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/nicknameTextView"
-            app:layout_constraintEnd_toStartOf="@id/addFriendButton"
+            app:layout_constraintEnd_toStartOf="@id/chatUser"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_chainStyle="spread_inside" />
 
         <ImageButton
-            android:id="@+id/addFriendButton"
+            android:id="@+id/chatUser"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="?attr/selectableItemBackgroundBorderless"
-            android:src="@android:drawable/ic_input_add"
+            android:src="@android:drawable/sym_action_chat"
 
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
