--- a/app/src/main/res/navigation/navgraph.xml
+++ b/app/src/main/res/navigation/navgraph.xml
@@ -27,5 +27,14 @@
         android:id="@+id/searchEngine"
         android:name="com.example.levelup.Fragments.SearchEngine"
         android:label="search_engine"
-        tools:layout="@layout/search_engine" />
+        tools:layout="@layout/search_engine" >
+        <action
+            android:id="@+id/action_searchEngine_to_chatFragment"
+            app:destination="@id/chatFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/chatFragment"
+        android:name="com.example.levelup.Fragments.ChatFragment"
+        android:label="fragment_chat"
+        tools:layout="@layout/fragment_chat" />
 </navigation>
