--- a/app/src/main/res/layout/chatmessage.xml
+++ b/app/src/main/res/layout/chatmessage.xml
@@ -3,12 +3,14 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="8dp"
-    android:layout_margin="4dp">
+    android:layout_margin="4dp"
+    android:background="@drawable/message_background">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        >
 
         <TextView
             android:id="@+id/messageContentTextView"
