--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="colorPrimary">#FAFAFA</color>
+    <color name="colorPrimaryDark">#F5EBE9</color>
+    <color name="colorAccent">#000000</color>
+    <color name="statusBarColor">#F5EBE9</color>
+    <color name="backgroundColor">#F5EBE9</color>
+    <color name="textColor">#000000</color>
+    <color name="hintColor">#000000</color>
 </resources>
