--- a/app/src/main/res/layout/chatmessage2.xml
+++ b/app/src/main/res/layout/chatmessage2.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="4dp"
-    android:background="@drawable/message_background"
+    android:background="#D9FFFFFF"
     android:orientation="vertical"
     android:padding="8dp">
 
@@ -13,6 +13,16 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/usernamemsg"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start"
+            android:padding="4dp"
+            android:text="Name"
+            android:textColor="@android:color/darker_gray"
+            android:textSize="12sp" />
+
+        <TextView
             android:id="@+id/messageContentTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -20,24 +30,15 @@
             android:padding="4dp"
             android:text="Message content"
             android:textColor="@android:color/black"
-            android:textSize="16sp" />
-
-        <TextView
-            android:id="@+id/usernamemsg"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:padding="4dp"
-            android:text="Name"
-            android:textColor="@android:color/darker_gray"
-            android:textSize="12sp" />
+            android:textSize="16sp"
+            android:gravity="end" />
     </LinearLayout>
 
     <TextView
         android:id="@+id/messageTimeTextView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="end"
+        android:layout_gravity="start"
         android:padding="4dp"
         android:text="12:00 PM"
         android:textColor="@android:color/darker_gray"
