--- a/app/src/main/res/drawable/message_background2.xml
+++ b/app/src/main/res/drawable/message_background2.xml
@@ -1,5 +1,5 @@
 <!-- res/drawable/semi_transparent_background.xml -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#1B87AB" />
+    <solid android:color="#87588E" />
     <corners android:radius="8dp" />
 </shape>
