--- a/app/src/main/res/navigation/navgraph.xml
+++ b/app/src/main/res/navigation/navgraph.xml
@@ -31,6 +31,9 @@
         <action
             android:id="@+id/action_searchEngine_to_chatFragment"
             app:destination="@id/chatFragment" />
+        <action
+            android:id="@+id/action_searchEngine_to_contactsList"
+            app:destination="@id/contactsList" />
     </fragment>
     <fragment
         android:id="@+id/chatFragment"
@@ -43,4 +46,9 @@
             app:popUpTo="@id/chatFragment"
             app:popUpToInclusive="true" />
     </fragment>
+    <fragment
+        android:id="@+id/contactsList"
+        android:name="com.example.levelup.Fragments.ContactsList"
+        android:label="fragment_contacts_list"
+        tools:layout="@layout/fragment_contacts_list" />
 </navigation>
