--- a/app/src/main/res/values/games_list.xml
+++ b/app/src/main/res/values/games_list.xml
@@ -1,43 +1,118 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="games_array">
-        <item>Minecraft</item>
-        <item>Fortnite</item>
-        <item>Call of Duty</item>
-        <item>Call of Duty: Modern Warfare</item>
-        <item>Call of Duty: Black Ops</item>
-        <item>League of Legends</item>
-        <item>Overwatch 2</item>
         <item>Apex Legends</item>
-        <item>Valorant</item>
-        <item>Genshin Impact</item>
-        <item>Cyberpunk 2077</item>
-        <item>Elden Ring</item>
-        <item>Path of Exile</item>
-        <item>Path of Exile 2</item>
-        <item>Stardew Valley</item>
-        <item>Rocket League</item>
-        <item>PUBG</item>
-        <item>Destiny 2</item>
-        <item>Fall Guys</item>
         <item>Among Us</item>
-        <item>Rainbow Six Siege</item>
-        <item>DOTA 2</item>
-        <item>Counter-Strike: Global Offensive</item>
+        <item>Age of Empires IV</item>
+        <item>Ark: Survival Evolved</item>
+        <item>Alien Swarm: Reactive Drop</item>
+
+        <item>Back 4 Blood</item>
+        <item>Baldurs Gate III</item>
+        <item>Battlefield 2042</item>
+        <item>Brawlhalla</item>
+        <item>Broforce</item>
+
+        <item>Call of Duty: Warzone</item>
+        <item>Counter-Strike 2</item>
+        <item>Clash Royale</item>
+        <item>Chivalry 2</item>
+        <item>Conan Exiles</item>
+
+        <item>Destiny 2</item>
+        <item>Diablo IV</item>
+        <item>Deep Rock Galactic</item>
+        <item>Dota 2</item>
+        <item>Dont Starve Together</item>
+
+        <item>Elden Ring</item>
+        <item>Escape from Tarkov</item>
+        <item>EVE Online</item>
+        <item>Exoprimal</item>
+
+        <item>Fortnite</item>
+        <item>Fall Guys</item>
+        <item>Final Fantasy XIV</item>
+        <item>For Honor</item>
+        <item>FIFA 23</item>
+
+        <item>Genshin Impact</item>
+        <item>GTA Online</item>
+        <item>Guild Wars 2</item>
+        <item>Ghost Recon: Breakpoint</item>
+        <item>Goose Goose Duck</item>
+
+        <item>Halo Infinite</item>
+        <item>Helldivers 2</item>
+        <item>Hunt: Showdown</item>
+        <item>Human: Fall Flat</item>
+        <item>Heroes of the Storm</item>
+
+        <item>It Takes Two</item>
+
+        <item>Jump King</item>
+
+        <item>Killing Floor 2</item>
+        <item>Knockout City</item>
+
+        <item>League of Legends</item>
+        <item>Lost Ark</item>
+        <item>Left 4 Dead 2</item>
+        <item>Lethal Company</item>
+
+        <item>Minecraft</item>
         <item>Monster Hunter: World</item>
+        <item>Multiversus</item>
+        <item>Marvel Snap</item>
+        <item>Mordhau</item>
+
+        <item>New World</item>
+        <item>Naraka: Bladepoint</item>
+
+        <item>Overwatch 2</item>
+        <item>Outriders</item>
+
+        <item>PUBG: Battlegrounds</item>
+        <item>Phasmophobia</item>
+        <item>Palworld</item>
+        <item>PlanetSide 2</item>
+        <item>Project Zomboid</item>
+
+        <item>Quake Champions</item>
+
+        <item>Rocket League</item>
+        <item>Rainbow Six Siege</item>
+        <item>Rust</item>
+        <item>Risk of Rain 2</item>
+        <item>Remnant 2</item>
+
+        <item>Sea of Thieves</item>
+        <item>Starfield</item>
+        <item>Smite</item>
+        <item>Splatoon 3</item>
+        <item>Street Fighter 6</item>
+
+        <item>Team Fortress 2</item>
+        <item>The Finals</item>
+        <item>Tom Clancys The Division 2</item>
+        <item>Terraria</item>
+        <item>Trackmania</item>
+
+        <item>Valorant</item>
+        <item>Valheim</item>
+        <item>V Rising</item>
+
         <item>Warframe</item>
         <item>World of Warcraft</item>
-        <item>Rust</item>
-        <item>Sea of Thieves</item>
-        <item>The Division 2</item>
-        <item>Battlefield V</item>
-        <item>Halo Infinite</item>
-        <item>Phasmophobia</item>
-        <item>Hunt: Showdown</item>
-        <item>Terraria</item>
-        <item>H1Z1</item>
-        <item>Smite</item>
-        <item>Team Fortress 2</item>
-        <item>Paladins</item>
+        <item>War Thunder</item>
+        <item>World War Z</item>
+
+        <item>XDefiant</item>
+        <item>Xenowerk Tactics</item>
+
+        <item>Yu-Gi-Oh! Master Duel</item>
+
+        <item>Zone 4: Fight District</item>
+        <item>Zombie Army 4</item>
     </string-array>
 </resources>
