--- a/app/src/main/res/values/games_list.xml
+++ b/app/src/main/res/values/games_list.xml
@@ -1,118 +1,127 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string-array name="games_array">
-        <item>Apex Legends</item>
-        <item>Among Us</item>
-        <item>Age of Empires IV</item>
-        <item>Ark: Survival Evolved</item>
-        <item>Alien Swarm: Reactive Drop</item>
-
-        <item>Back 4 Blood</item>
-        <item>Baldurs Gate III</item>
-        <item>Battlefield 2042</item>
-        <item>Brawlhalla</item>
-        <item>Broforce</item>
-
-        <item>Call of Duty: Warzone</item>
-        <item>Counter-Strike 2</item>
-        <item>Clash Royale</item>
-        <item>Chivalry 2</item>
-        <item>Conan Exiles</item>
-
-        <item>Destiny 2</item>
-        <item>Diablo IV</item>
-        <item>Deep Rock Galactic</item>
-        <item>Dota 2</item>
-        <item>Dont Starve Together</item>
-
-        <item>Elden Ring</item>
-        <item>Escape from Tarkov</item>
-        <item>EVE Online</item>
-        <item>Exoprimal</item>
-
+    <string-array name="popular_multiplayer_games">
+        <!-- Top 20 Most Popular -->
         <item>Fortnite</item>
-        <item>Fall Guys</item>
-        <item>Final Fantasy XIV</item>
-        <item>For Honor</item>
-        <item>FIFA 23</item>
-
-        <item>Genshin Impact</item>
-        <item>GTA Online</item>
-        <item>Guild Wars 2</item>
-        <item>Ghost Recon: Breakpoint</item>
-        <item>Goose Goose Duck</item>
-
-        <item>Halo Infinite</item>
-        <item>Helldivers 2</item>
-        <item>Hunt: Showdown</item>
-        <item>Human: Fall Flat</item>
-        <item>Heroes of the Storm</item>
-
-        <item>It Takes Two</item>
-
-        <item>Jump King</item>
-
-        <item>Killing Floor 2</item>
-        <item>Knockout City</item>
-
-        <item>League of Legends</item>
-        <item>Lost Ark</item>
-        <item>Left 4 Dead 2</item>
-        <item>Lethal Company</item>
-
         <item>Minecraft</item>
-        <item>Monster Hunter: World</item>
-        <item>Multiversus</item>
-        <item>Marvel Snap</item>
-        <item>Mordhau</item>
-
-        <item>New World</item>
-        <item>Naraka: Bladepoint</item>
-
-        <item>Overwatch 2</item>
-        <item>Outriders</item>
-
-        <item>PUBG: Battlegrounds</item>
-        <item>Phasmophobia</item>
-        <item>Palworld</item>
-        <item>PlanetSide 2</item>
-        <item>Project Zomboid</item>
-
-        <item>Quake Champions</item>
-
+        <item>Roblox</item>
+        <item>Call of Duty: Warzone</item>
+        <item>Apex Legends</item>
+        <item>League of Legends</item>
+        <item>Counter-Strike 2</item>
+        <item>Genshin Impact</item>
         <item>Rocket League</item>
-        <item>Rainbow Six Siege</item>
-        <item>Rust</item>
-        <item>Risk of Rain 2</item>
-        <item>Remnant 2</item>
-
-        <item>Sea of Thieves</item>
-        <item>Starfield</item>
-        <item>Smite</item>
-        <item>Splatoon 3</item>
-        <item>Street Fighter 6</item>
-
-        <item>Team Fortress 2</item>
-        <item>The Finals</item>
-        <item>Tom Clancys The Division 2</item>
-        <item>Terraria</item>
-        <item>Trackmania</item>
-
+        <item>Helldivers 2</item>
+        <item>PUBG: Battlegrounds</item>
         <item>Valorant</item>
+        <item>Overwatch 2</item>
+        <item>GTA Online</item>
+        <item>Destiny 2</item>
+        <item>World of Warcraft</item>
+        <item>Diablo IV</item>
+        <item>Path of Exile</item>
+        <item>Rainbow Six Siege</item>
+        <item>Dota 2</item>
+
+        <!-- 2024 Breakout Hits -->
+        <item>Palworld</item>
+        <item>Marvel Rivals</item>
+        <item>Warhammer 40K: Space Marine 2</item>
+        <item>The Finals</item>
+        <item>Dragon Ball: Sparking Zero</item>
+        <item>Elden Ring: Shadow of the Erdtree</item>
+        <item>Honkai: Star Rail</item>
+        <item>Mobile Legends: Bang Bang</item>
+        <item>Clash of Clans</item>
+        <item>Baldurs Gate 3</item>
+
+        <!-- Co-op Classics -->
+        <item>Sea of Thieves</item>
+        <item>Monster Hunter: World</item>
+        <item>It Takes Two</item>
         <item>Valheim</item>
+        <item>Deep Rock Galactic</item>
+        <item>Dont Starve Together</item>
+        <item>Phasmophobia</item>
+        <item>Lethal Company</item>
+        <item>Core Keeper</item>
         <item>V Rising</item>
 
-        <item>Warframe</item>
-        <item>World of Warcraft</item>
-        <item>War Thunder</item>
-        <item>World War Z</item>
+        <!-- Battle Royales -->
+        <item>Fall Guys</item>
+        <item>H1Z1</item>
+        <item>Spellbreak</item>
+        <item>Realm Royale</item>
+        <item>Hyper Scape</item>
 
-        <item>XDefiant</item>
-        <item>Xenowerk Tactics</item>
+        <!-- MOBAs -->
+        <item>Smite</item>
+        <item>Heroes of the Storm</item>
+        <item>Vainglory</item>
+        <item>Arena of Valor</item>
+        <item>Pokémon Unite</item>
 
-        <item>Yu-Gi-Oh! Master Duel</item>
+        <!-- MMORPGs -->
+        <item>Final Fantasy XIV</item>
+        <item>Guild Wars 2</item>
+        <item>Black Desert Online</item>
+        <item>Elder Scrolls Online</item>
+        <item>New World</item>
 
-        <item>Zone 4: Fight District</item>
-        <item>Zombie Army 4</item>
+        <!-- Shooters -->
+        <item>Battlefield 2042</item>
+        <item>Halo Infinite</item>
+        <item>Team Fortress 2</item>
+        <item>Splitgate</item>
+        <item>Insurgency: Sandstorm</item>
+
+        <!-- Survival Games -->
+        <item>Rust</item>
+        <item>ARK: Survival Evolved</item>
+        <item>Conan Exiles</item>
+        <item>DayZ</item>
+        <item>7 Days to Die</item>
+
+        <!-- Indie Multiplayer -->
+        <item>Among Us</item>
+        <item>Stardew Valley</item>
+        <item>Terraria</item>
+        <item>Risk of Rain 2</item>
+        <item>Gunfire Reborn</item>
+
+        <!-- Fighting Games -->
+        <item>Street Fighter 6</item>
+        <item>Tekken 8</item>
+        <item>Mortal Kombat 1</item>
+        <item>Super Smash Bros. Ultimate</item>
+        <item>Dragon Ball FighterZ</item>
+
+        <!-- Sports & Racing -->
+        <item>FIFA 23</item>
+        <item>NBA 2K24</item>
+        <item>Forza Horizon 5</item>
+        <item>Gran Turismo 7</item>
+        <item>Rocket League Sideswipe</item>
+
+        <!-- Retro Multiplayer -->
+        <item>Quake III Arena</item>
+        <item>Unreal Tournament 2004</item>
+        <item>StarCraft: Brood War</item>
+        <item>Warcraft III: Frozen Throne</item>
+        <item>Diablo II: Resurrected</item>
+
+        <!-- Mobile Exclusives -->
+        <item>Clash Royale</item>
+        <item>Brawl Stars</item>
+        <item>Garena Free Fire</item>
+        <item>Call of Duty: Mobile</item>
+        <item>Asphalt 9: Legends</item>
+
+        <!-- Upcoming Titles -->
+        <item>Star Wars: Hunters</item>
+        <item>Project L</item>
+        <item>Suicide Squad: Kill the Justice League</item>
+        <item>Skull and Bones</item>
+        <item>Ark 2</item>
     </string-array>
 </resources>
