--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,11 +7,14 @@
     tools:context=".MainActivity">
 
 
-    <fragment
+    <!-- activity_main.xml -->
+    <androidx.fragment.app.FragmentContainerView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/nav_host_fragment"
-        android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:defaultNavHost="true"
-        app:navGraph="@navigation/navgraph" />
+        app:navGraph="@navigation/navgraph"
+        android:name="androidx.navigation.fragment.NavHostFragment" />
 </androidx.constraintlayout.widget.ConstraintLayout>
