--- a/app/src/main/res/layout/chatmessage2.xml
+++ b/app/src/main/res/layout/chatmessage2.xml
@@ -1,5 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/msgarea"
+    android:id="@+id/msgarea2"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="4dp"
