--- a/app/src/main/res/layout/fragment_contacts_list.xml
+++ b/app/src/main/res/layout/fragment_contacts_list.xml
@@ -3,10 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragments.ContactsList">
+    tools:context=".Fragments.ContactsList"
+    >
+
+
+
 
     <LinearLayout
-        android:layout_width="match_parent"
+    android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="8dp">
@@ -29,5 +33,16 @@
             android:clipToPadding="false"
             tools:listitem="@layout/usercard" />
 
+
+
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/overlayImage"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/loadingoverlay"
+        android:scaleType="centerCrop"
+        android:visibility="visible"
+        android:alpha="1.0" />
 </FrameLayout>
