--- a/app/src/main/res/layout/fragment_create_profile.xml
+++ b/app/src/main/res/layout/fragment_create_profile.xml
@@ -136,14 +136,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/GamesSelected" />
 
-    <Button
+    <android.widget.Button
         android:id="@+id/registerButton"
         android:layout_width="382dp"
         android:layout_height="50dp"
         android:layout_marginTop="12dp"
         android:layout_marginBottom="16dp"
-        android:backgroundTint="@android:color/holo_red_light"
+        android:backgroundTint="@null"
         android:text="Register"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:background="@drawable/buttondesign"
+        android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.482"
